--- a/website/style.css
+++ b/website/style.css
@@ -1,8 +1,13 @@
+div {
+	border: 1px solid #000;
+	padding: 5px;
+	margin: 5px;
+}
 div#Logo{
 	text-align:center;
-	width: 370px;
-	height: 180px;
-	background-image:url(LogoFacu.jpg);
+	width: 675px;
+	height: 141px;
+	background-image:url(LogoFacu.png);
 	background-repeat:no-repeat;
 	overflow:hidden;
 	-webkit-border-radius: 50px;
@@ -28,9 +33,4 @@ div#conect {
 }
 body {
 	background: white;
-}
-div {
-	border: 1px solid #000;
-	padding: 5px;
-	margin: 5px;
 }
