--- a/website/style.css
+++ b/website/style.css
@@ -113,7 +113,7 @@ a.ison + span {
 /*Old stylesheet*/
 
 div {
-	border: 1px solid #000;
+	/*border: 1px solid #000;*/
 	padding: 5px;
 	margin: 5px;
 }
