--- a/website/style.css
+++ b/website/style.css
@@ -62,6 +62,7 @@ a:before {
 	box-shadow: 0px 1px 0px 0px rgba(250,250,250,0.1), 
 			 	inset 0px 1px 2px rgba(0, 0, 0, 0.5);
 }
+/*
 a:active {
     box-shadow: 0px 0px 0px 0px rgb(34,34,34),
     			0px 3px 7px 0px rgb(17,17,17),
@@ -69,7 +70,7 @@ a:active {
     			inset 0px -10px 35px 5px rgba(0, 0, 0, .5);
     background-color: rgb(83,87,93);
   	top: 3px;
-}
+}*/
 a.on {
     box-shadow: 0px 0px 0px 0px rgb(34,34,34),
     			0px 3px 7px 0px rgb(17,17,17), 
@@ -147,6 +148,7 @@ div#Sensoresbox{
 .Sensores{	
 	float : left;
 	width:100px;
+	opacity: 0.4;
 	/*background-color: #E8E8E8;*/
 }
 div#Interruption {
