Cambiado logo a png

--- a/website/style.css
+++ b/website/style.css
@@ -125,7 +125,7 @@ div#Logo{
 	text-align:center;
 	/*width:1000px;*/
 	height:100px;
-	background-image:url(images/LogoFacu.svg);
+	background-image:url(images/LogoFacu.png);
 	background-repeat:no-repeat;
 	overflow:hidden;
 	background-position:center;
